[Cocoa] Generic font families do not consult with the user's preferred language https://bugs.webkit.org/show_bug.cgi?id=148499 <rdar://problem/22407296>

Reviewed by Antti Koivisto.

Source/WebCore:

When WebKit encounters markup like lang="zh" style="font-family: sans-serif;"
we currently always use Simplified Chinese fonts. However, the user may
have specifically selected Traditional Chinese in their user preferences.
In this absence of other signals, we should consult with the user
preferences when determining which font to pick.

Tests: fast/text/international/generic-font-family-language-simplified.html
       fast/text/international/generic-font-family-language-traditional.html

* platform/Language.cpp:
(WebCore::observerMap):
(WebCore::overrideUserPreferredLanguages):
* platform/graphics/FontGenericFamilies.cpp:
(WebCore::computeUserPrefersSimplified):
(WebCore::cachedUserPrefersSimplified):
(WebCore::languageChanged):
(WebCore::genericFontFamilyForScript):
(WebCore::FontGenericFamilies::FontGenericFamilies):
* platform/text/LocaleToScriptMappingDefault.cpp:
(WebCore::scriptNameToCode):

LayoutTests:

Mock the user's font preferences.

* fast/text/international/font-fallback-to-common-script.html:
* fast/text/international/generic-font-family-language-simplified-expected.html: Added.
* fast/text/international/generic-font-family-language-simplified.html: Added.
* fast/text/international/generic-font-family-language-traditional-expected.html: Added.
* fast/text/international/generic-font-family-language-traditional.html: Added.
* fast/text/international/lang-sensitive-fonts-xml.xhtml:
* fast/text/international/lang-sensitive-fonts.html:
* fast/text/international/locale-sensitive-fonts.html:

Canonical link: https://commits.webkit.org/166634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189038 268f45cc-cd09-0410-ab3c-d52691b4dbfc