Source/WebCore/platform/graphics/FontGenericFamilies.cpp
@@ -25,6 +25,7 @@
 
 #include "config.h"
 #include "FontGenericFamilies.h"
+#include "Language.h"
 
 namespace WebCore {
 
@@ -46,11 +47,41 @@ static bool setGenericFontFamilyForScript(ScriptFontFamilyMap& fontMap, const At
     return true;
 }
 
+static inline bool computeUserPrefersSimplified()
+{
+    const Vector<String>& preferredLanguages = userPreferredLanguages();
+    for (auto& language : preferredLanguages) {
+        if (equalIgnoringASCIICase(language, "zh-tw"))
+            return false;
+        if (equalIgnoringASCIICase(language, "zh-cn"))
+            return true;
+    }
+    return true;
+}
+
+static bool& cachedUserPrefersSimplified()
+{
+    static bool cached = true;
+    return cached;
+}
+
+static void languageChanged(void*)
+{
+    cachedUserPrefersSimplified() = computeUserPrefersSimplified();
+}
+
 static const AtomicString& genericFontFamilyForScript(const ScriptFontFamilyMap& fontMap, UScriptCode script)
 {
     ScriptFontFamilyMap::const_iterator it = fontMap.find(static_cast<int>(script));
     if (it != fontMap.end())
         return it->value;
+    // Content using USCRIPT_HAN doesn't tell us if we should be using Simplified Chinese or Traditional Chinese. In the
+    // absence of all other signals, we consult with the user's system preferences.
+    if (script == USCRIPT_HAN) {
+        it = fontMap.find(static_cast<int>(cachedUserPrefersSimplified() ? USCRIPT_SIMPLIFIED_HAN : USCRIPT_TRADITIONAL_HAN));
+        if (it != fontMap.end())
+            return it->value;
+    }
     if (script != USCRIPT_COMMON)
         return genericFontFamilyForScript(fontMap, USCRIPT_COMMON);
     return emptyAtom;
@@ -58,6 +89,8 @@ static const AtomicString& genericFontFamilyForScript(const ScriptFontFamilyMap&
 
 FontGenericFamilies::FontGenericFamilies()
 {
+    addLanguageChangeObserver(this, &languageChanged);
+    languageChanged(nullptr);
 }
 
 const AtomicString& FontGenericFamilies::standardFontFamily(UScriptCode script) const
